--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/tomhobeika/CSIT321.git"
   }
 }
