--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "spin.js": "^4.1.1",
     "web-vitals": "^2.1.4",
     "webrtc-adapter": "^8.2.0"
   },
