--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/api/node_modules
 /.pnp
 .pnp.js
 
@@ -9,6 +10,7 @@
 /coverage
 
 # misc
+.bak
 .DS_Store
 .env.local
 .env.development.local
@@ -21,3 +23,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
+/api/package-lock.json
