--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "weteach mongodb driver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
