--- a/package.json
+++ b/package.json
@@ -1,18 +1,40 @@
 {
   "name": "weteach",
-  "version": "0.1.0",
+  "version": "1.0.2",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@mui/material": "^5.12.2",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-date-pickers": "^6.3.0",
+    "@popperjs/core": "^2.11.7",
+    "@rollup/plugin-terser": "^0.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.6",
+    "axios": "^0.24.0",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
+    "form-data": "^4.0.0",
     "jquery": "^3.6.1",
+    "jquery.easing": "^1.4.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.2",
     "spin.js": "^4.1.1",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4",
     "webrtc-adapter": "^8.2.0"
   },
@@ -43,5 +65,14 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/tomhobeika/CSIT321.git"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16",
+    "autoprefixer": "^10.4.14",
+    "css-loader": "^6.7.3",
+    "postcss-loader": "^7.3.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2"
   }
 }
