--- a/upload/package.json
+++ b/upload/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "formidable": "^3.2.5",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "randomstring": "^1.2.3",
