--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
@@ -21,6 +20,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "yenv": "^3.0.1"
   }
 }
