--- a/api/config.yaml
+++ b/api/config.yaml
@@ -3,7 +3,7 @@ base:
   MONGODB_WIN32_URL: "mongodb://127.0.0.1"
   PRESENTER_KEY: "sm35eMKK5fAsTYRMi5kBgFaxhhzzJNoN"
   ATTENDEE_KEY: "x6D7FmiXJQ4PPbY8KhdJ3EfTMJB4YgaD"
- 
+  STORAGE_LOCATION: "/weteach/data" 
 development:
   ~compose: [base]
   
