--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-jwt": "^1.1.8",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
     "spin.js": "^4.1.1",
@@ -77,8 +78,8 @@
     "style-loader": "^3.3.2"
   },
   "overrides": {
-   "react-scripts": {
-       "@svgr/webpack": "^6.5.1"
+    "react-scripts": {
+      "@svgr/webpack": "^6.5.1"
     }
   }
 }
