--- a/upload/package.json
+++ b/upload/package.json
@@ -20,7 +20,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "randomstring": "^1.2.3",
-    "superagent": "^7.0.2"
+    "superagent": "^7.0.2",
+    "yenv": "^3.0.1"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
